bk_ida/gccida/c2/debug_bitmap_file
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/debug_bitmap_file/src/bitmap.c:1231:16: error: use of undeclared identifier 'off_66C47B'
fprintf( file, off_66C47B, ( unsigned int)( j + ( i->indx << 7))); 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/debug_bitmap_file/src/bitmap.c:1245:16: error: use of undeclared identifier 'off_66C47B'
fprintf( file, off_66C47B, ( unsigned int)( k + ( i->indx << 7) + 64)); 
               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/debug_bitmap_file/src/obj/bitmap.o] Error 1
